--- a/work2/index.html
+++ b/work2/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitWork</title>
+    <title>2.Ödev</title>
 </head>
 
 <body>
-
+    <!--Başlık etiketi-->
+    <h1>Kemal İKİZOĞLU</h1>
+    <!--Alt Başlık etiketi-->
+    <h2>Hakkımda</h2>
+    <!--Paragraf etiketleri-->
+    <p>HTML işaretleme dili ile web sayfa şablonları tasarlamak beni inanılmaz mutlu hissettiriyor. </p>
+    <p>Bu eğitim çok keyifli ilerliyor.</p>
+    <img src="./motivasyon.png">
+    <p>Motivasyon ve disiplin öğrenme için önemli iki temel noktadır.</p>
 </body>
 
 </html>
