Kitap - Fim - Dizi

--- a/work2/index.html
+++ b/work2/index.html
@@ -16,7 +16,48 @@
     <!--Paragraf etiketleri-->
     <p>HTML işaretleme dili ile web sayfa şablonları tasarlamak beni inanılmaz mutlu hissettiriyor. </p>
     <p>Bu eğitim çok keyifli ilerliyor.</p>
-    <img src="./motivasyon.png">
+    <list>
+        <p>En Sevdiğim Kitaplar</p>
+        <ol>
+            <a href="https://www.goodreads.com/book/show/44446425-yeti-in-ocuklar">
+                <li>Yetişin Çocuklar - Şelcuk Şirin</li>
+            </a>
+            <a href="https://www.kitapyurdu.com/kitap/bir-omur-nasil-yasanir-amp-hayatta-dogru-secimler-icin-oneriler/493305.html" target="_blank">
+                <li>Bir ömür nasıl yaşanır? - İlber Ortaylı</li>
+            </a>
+            <a href="https://www.kitapyurdu.com/kitap/bir-bilim-adaminin-romani--butun-eserleri-5/18256.html" target="_blank">
+                <li>Bir Bilim Adamının Romanı - Oğuz Atay</li>
+            </a>
+            <li>Steve Jobs - Walter Isaacson</li>
+
+        </ol>
+    </list>
+    <list>
+        <p>En Sevdiğim Fimler</p>
+        <ol>
+            <a href="https://www.imdb.com/title/tt0418279/" target="blank">
+                <li>Transformers</li>
+            </a>
+            <a href="https://www.youtube.com/watch?v=ynWf3cfolhE" target="_blank">
+                <li>Iron Man</li>
+            </a>
+            <li>Baba Serisi</li>
+            <li>Can Dostum</li>
+        </ol>
+    </list>
+    <list>
+        <p>En Sevdiğim Diziler</p>
+        <ol>
+            <a href="https://www.imdb.com/title/tt0903747/" target="_blank">
+                <li>Breaking Bad</li>
+            </a>
+            <li>WestWorld</li>
+            <li>Dark</li>
+            <li>La casa de Papel</li>
+        </ol>
+    </list>
+
+    <img src="./motivasyon.png" height="300" width="500">
     <p>Motivasyon ve disiplin öğrenme için önemli iki temel noktadır.</p>
 </body>
 
