--- a/work2/index.html
+++ b/work2/index.html
@@ -17,7 +17,7 @@
     <p>HTML işaretleme dili ile web sayfa şablonları tasarlamak beni inanılmaz mutlu hissettiriyor. </p>
     <p>Bu eğitim çok keyifli ilerliyor.</p>
     <list>
-        <p>En Sevdiğim Kitaplar</p>
+        <h3>En Sevdiğim Kitaplar</h3>
         <ol>
             <a href="https://www.goodreads.com/book/show/44446425-yeti-in-ocuklar">
                 <li>Yetişin Çocuklar - Şelcuk Şirin</li>
@@ -33,7 +33,7 @@
         </ol>
     </list>
     <list>
-        <p>En Sevdiğim Fimler</p>
+        <h3>En Sevdiğim Fimler</h3>
         <ol>
             <a href="https://www.imdb.com/title/tt0418279/" target="blank">
                 <li>Transformers</li>
@@ -46,7 +46,7 @@
         </ol>
     </list>
     <list>
-        <p>En Sevdiğim Diziler</p>
+        <h3>En Sevdiğim Diziler</h3>
         <ol>
             <a href="https://www.imdb.com/title/tt0903747/" target="_blank">
                 <li>Breaking Bad</li>
