--- a/work2/index.html
+++ b/work2/index.html
@@ -57,7 +57,7 @@
         </ol>
     </list>
 
-    <img src="./motivasyon.png" height="300" width="500">
+    <img src="./motivasyon.png" height="300" width="500" alt="Motivasyon Burada!">
     <p>Motivasyon ve disiplin öğrenme için önemli iki temel noktadır.</p>
 </body>
 
