--- a/work3/index.html
+++ b/work3/index.html
@@ -1,15 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>devWork 3</title>
+    <title>Anasayfa</title>
 </head>
 
 <body>
-
+    <!--NavBar Start-->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Anasayfa</a></li>
+            </ul>
+            <ul>
+                <li><a href="about.html">Hakkımızda</a></li>
+            </ul>
+            <ul>
+                <li><a href="contact.html">İletişim</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!--NavBar End-->
+    <!--Content Start-->
+    <section>
+        <article>
+            <h2>Birinci Yazı</h2>
+            <img src="https://picsum.photos/id/237/600/300" alt="Yazı 1">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Sapiente voluptatem consequuntur tenetur nulla?</p>
+            <p>Sit ex accusamus dolor. Obcaecati!</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <ul>
+                <li>Lorem, ipsum dolor.</li>
+                <li>Non, assumenda iste.</li>
+                <li>Eum, neque laboriosam?</li>
+                <li>Ut, eius quasi?</li>
+            </ul>
+            <hr>
+        </article>
+        <article>
+            <h2>İkinci Yazı</h2>
+            <img src="https://picsum.photos/id/37/600/300" alt="Yazı 2">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Sapiente voluptatem consequuntur tenetur nulla?</p>
+            <p>Sit ex accusamus dolor. Obcaecati!</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <ol>
+                <li>Lorem, ipsum dolor.</li>
+                <li>Non, assumenda iste.</li>
+                <li>Eum, neque laboriosam?</li>
+                <li>Ut, eius quasi?</li>
+            </ol>
+            <hr>
+        </article>
+        <article>
+            <h2>Üçüncü Yazı</h2>
+            <img src="https://picsum.photos/id/27/600/300" alt="Yazı 3">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Sapiente voluptatem consequuntur tenetur nulla?</p>
+            <p>Sit ex accusamus dolor. Obcaecati!</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <ul>
+                <li>Lorem, ipsum dolor.</li>
+                <li>Non, assumenda iste.</li>
+                <li>Eum, neque laboriosam?</li>
+                <li>Ut, eius quasi?</li>
+            </ul>
+            <hr>
+        </article>
+    </section>
+    <!--Content End-->
+    <!--Footer Start-->
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="index.html">Anasayfa</a></li>
+            </ul>
+            <ul>
+                <li><a href="about.html">Hakkımızda</a></li>
+            </ul>
+            <ul>
+                <li><a href="contact.html">İletişim</a></li>
+            </ul>
+        </nav>
+    </footer>
+    <!--Footer End-->
 </body>
 
 </html>
