--- a/work3/about.html
+++ b/work3/about.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
-    <title></title>
+    <title>Hakkımızda</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,8 +26,8 @@
     <!--Content Start-->
     <section>
         <article>
-            <h2>Birinci Yazı</h2>
-            <img src="https://picsum.photos/id/237/600/300" alt="Yazı 1">
+            <h2>Hakkımızda</h2>
+            <img src="https://picsum.photos/id/7/600/300" alt="Hakkımızda">
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Sapiente voluptatem consequuntur tenetur nulla?</p>
             <p>Sit ex accusamus dolor. Obcaecati!</p>
