--- a/work4/index.html
+++ b/work4/index.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Çikolata Küpleri Tarifi</title>
+
 </head>
 
-<body>
-
+<body bgcolor="#E3C9C3">
+    <h1><b><i>..Çikolata Küpleri...</i></b></h1><br>
+    <i><b>Çikolatalı ve şam fıstıklı tadımlık lezzetler.. Yalnızca 4 malzeme ile hazırlanan çikolata küpleri, renkli kağıtlarda veya kürdan batırılarak servis edilir.Özellikle kalabalık sofralarda yer verilen çikolata küpleri, doğum günü gibi özel etkinliklerde
+        sunulabilir. </b></i>
+    <br><br><b>Tarif:</b> Rukiye Beyza Sarıkaya
 </body>
 
 </html>
