--- a/work4/index.html
+++ b/work4/index.html
@@ -14,6 +14,31 @@
     <i><b>Çikolatalı ve şam fıstıklı tadımlık lezzetler.. Yalnızca 4 malzeme ile hazırlanan çikolata küpleri, renkli kağıtlarda veya kürdan batırılarak servis edilir.Özellikle kalabalık sofralarda yer verilen çikolata küpleri, doğum günü gibi özel etkinliklerde
         sunulabilir. </b></i>
     <br><br><b>Tarif:</b> Rukiye Beyza Sarıkaya
+    <br><br><u><span style="color:rgb(179, 2, 2);">Kaç Kişilik:</span></u> 4 Kişilik &nbsp;<u><span style="color:rgb(179, 2, 2);">Hazırlama Süresi:</span></u> 30 Dakika &nbsp;<u><span style="color:rgb(179, 2, 2);">Pişirme Süresi:</span></u> 10 Dakika
+    <br><br><span style="border-radius: 10px; background-color: rgb(100, 9, 9); color: aliceblue;"> Çikolata Küpleri Tarifi için Malzemeler </span>
+    <br>
+    <ul>
+        <li>350 gr bitter çikolata</li>
+        <li>150 ml krema</li>
+        <li>1 çorba kaşığı tereyağı</li>
+        <li>150 gr şamfıstık (Badem veya fındık da olabilir)</li>
+    </ul>
+    <br><br><span style="border-radius: 10px; background-color: rgb(100, 9, 9); color: aliceblue;"> Çikolata Küpleri Nasıl Yapılır? </span>
+    <br>
+    <ol>
+        <li>Bitter çikolatayı benmari usulü eritin.</li>
+        <li>Eriyen çikolatanın üzerine krema ve tereyağı ekleyip iyice karıştırıp tencereyi bir tezgaha alın.</li>
+        <li>Şamfıstıkları havanda çok az dövüp irili ufaklı parçalara bölün.</li>
+        <li>Ufaklanan fıstıkları çikolatalı karışıma ekleyip karıştırın.</li>
+        <li>Hazırladığınız çikolatayı varsa alüminyum hazır bir kare tepsiye, yoksa kenarlarından taşarak yağlı kağıt yerleştirdiğiniz küçük bir tepsiye dökün.</li>
+        <li>Buzdolabında iki saat bekletin.</li>
+        <li>Çikolatayı kalıptan çıkartın. Kare parçalara bölün.</li>
+    </ol>
+    <h2 align="right">Afiyet olsun</h2>
+
+
+
+
 </body>
 
 </html>
