--- a/work6/index.html
+++ b/work6/index.html
@@ -16,13 +16,31 @@
         </div>
         <div class="search">
             <p>Search the web using Google!</p>
-            <input type="text"><br>
-            <button>Arama Yap!</button>
+            <input type="text" id="name" name="name" size="50"><br><br>
+            <button>Google Search</button><button>I'm feeling lucky!</button>
         </div>
         <div class="links">
-            <div id="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, totam?</div>
-            <div id="box">Asperiores cum excepturi sequi ea consequatur, vero perferendis distinctio ipsum.</div>
-            <div id="box">Molestias maiores, quisquam et error facere sit exercitationem eius iusto.</div>
+            <div class="box">
+                <ol>
+                    <li>Special Searches</li>
+                    <li>Stanford Searches</li>
+                    <li>Linux Searches</li>
+                </ol>
+            </div>
+            <div class="box">
+                <ol>
+                    <li>Special Searches</li>
+                    <li>Stanford Searches</li>
+                    <li>Linux Searches</li>
+                </ol>
+            </div>
+            <div class="box">
+                <ol>
+                    <li>Special Searches</li>
+                    <li>Stanford Searches</li>
+                    <li>Linux Searches</li>
+                </ol>
+            </div>
 
         </div>
         <div id="footer">
