--- a/work6/index.html
+++ b/work6/index.html
@@ -20,31 +20,43 @@
             <button>Google Search</button><button>I'm feeling lucky!</button>
         </div>
         <div class="links">
-            <div class="box">
+            <div class="box1">
                 <ol>
                     <li>Special Searches</li>
-                    <li>Stanford Searches</li>
-                    <li>Linux Searches</li>
+                    <a href="#">
+                        <li>Stanford Searches</li>
+                    </a>
+                    <a href="#">
+                        <li>Linux Searches</li>
+                    </a>
                 </ol>
             </div>
-            <div class="box">
+            <div class="box2">
                 <ol>
-                    <li>Special Searches</li>
-                    <li>Stanford Searches</li>
-                    <li>Linux Searches</li>
+                    <a href="#">
+                        <li>Help!</li>
+                    </a>
+                    <a href="#">
+                        <li>About Google!</li>
+                    </a>
+                    <a href="#">
+                        <li>Company Info</li>
+                    </a>
+                    <a href="#">
+                        <li>Google! Logos</li>
+                    </a>
                 </ol>
             </div>
-            <div class="box">
-                <ol>
-                    <li>Special Searches</li>
-                    <li>Stanford Searches</li>
-                    <li>Linux Searches</li>
-                </ol>
+            <div class="box3">
+                <p>Get Google! <br>Updates monthly: <br><input type="text" id="name" placeholder="your email" name="name" size="30"><br>
+                    <button>Subscribe</button>
+                    <a href="#">Archive</a>
+                </p>
             </div>
-
         </div>
-        <div id="footer">
-
+        <div class="clear"></div>
+        <div class="footer">
+            <span>Copyright © 1998 Google Inc.</span>
         </div>
     </div>
 </body>
