--- a/work8-bootstrap-1/index.html
+++ b/work8-bootstrap-1/index.html
@@ -40,22 +40,17 @@
     <div class="container">
         <div class="p-5 mb-4 rounded-3">
             <div class="container-fluid py-5">
-                <h1 class="display-5 fw-bold text-center">Merhaba</h1>
+                <h1 class="display-5 fw-bold text-center text-danger">Merhaba!</h1>
                 <p class="col-md-12 fs-5 text-center">Müzik dükkanım sitesine hoş geldiniz. Bu sitede çeiştli müzik aletlerini çok uygun fiyatlara bulabilirsiniz. Uygun fiyatlarımız ve kaliteli ürünlerimiz için Ürünlerimiz sayfasını inceleyebilirsiniz.</p>
             </div>
-        </div>
-        <div class="row">
-            <p></p>
-        </div>
+            <h5 class="text-warning text-center"><u>Sitemizde yer alan enstrumanlarımız</u></h5>
+            <div class="list-group text-center">
+                <li>Gitar</li>
+                <li>Davul</li>
+                <li>Piyano</li>
+                <li>Keman</li>
 
-
-
-
-
-
-        <div class="row">
-
-
+            </div>
         </div>
     </div>
     <!--Container End-->
@@ -63,12 +58,12 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous "></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js " integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js " integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13 " crossorigin="anonymous "></script>
     -->
 </body>
 
