--- a/work8-bootstrap-1/about.html
+++ b/work8-bootstrap-1/about.html
@@ -12,24 +12,24 @@
     <title>Müzik Dükkanım</title>
 </head>
 
-<body>
+<body style="background: #E9ECEF ;">
     <!--Navbar Start-->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark text-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">.Enst</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark text-light ">
+        <div class="container-fluid ">
+            <a class="navbar-brand " href="# ">.Enst</a>
+            <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNav " aria-controls="navbarNav " aria-expanded="false " aria-label="Toggle navigation ">
+            <span class="navbar-toggler-icon "></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
+            <div class="collapse navbar-collapse " id="navbarNav ">
+                <ul class="navbar-nav ">
+                    <li class="nav-item ">
+                        <a class="nav-link active " aria-current="page " href="index.html ">Anasayfa</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">Hakkımızda</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="about.html ">Hakkımızda</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="product.html">Ürünlerimiz</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="product.html ">Ürünlerimiz</a>
                     </li>
                 </ul>
             </div>
@@ -37,8 +37,18 @@
     </nav>
     <!--Navbar End-->
     <!--Container Start-->
-    <div class="container">
+    <div class="container " ">
+    <div class="row m-5 text-center ">
+        <h2 class="text-danger "> Hakkımızda </h2>
+        <hr>
+        <img src="https://picsum.photos/id/39/700/200 " class="mt-2 " style="width: 700px; " alt="Müziğe olan ilgimiz ">
 
+        <p>Müzik dükkanım 2022 yılında İstanbulun en nezih semtinde insanlara daha fazla müzik ulaştırabilmek adına kuruldu.</p>
+        <h3 class="text-warning mt-1 "> Vizyonumuz </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt asperiores inventore perferendis dolor ipsam, explicabo voluptate velit sapiente facilis qui minus? Veniam officiis suscipit minima reiciendis magni harum, iure itaque.</p>
+        <h2 class="text-warning mt-1 "> Misyonumuz </h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem fugit, repellat voluptatum iusto repudiandae pariatur quisquam doloremque perferendis fuga perspiciatis et porro modi animi doloribus eius mollitia dignissimos omnis expedita!</p>
+    </div>
     </div>
     <!--Container End-->
 
