--- a/work8-bootstrap-1/index.html
+++ b/work8-bootstrap-1/index.html
@@ -12,7 +12,7 @@
     <title>Müzik Dükkanım</title>
 </head>
 
-<body>
+<body style="background: #E9ECEF ;">
     <!--Navbar Start-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark text-light">
         <div class="container-fluid">
@@ -23,13 +23,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Anasayfa</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hakkımızda</a>
+                        <a class="nav-link" href="about.html">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Ürünlerimiz</a>
+                        <a class="nav-link" href="product.html">Ürünlerimiz</a>
                     </li>
                 </ul>
             </div>
@@ -49,6 +49,8 @@
                 <li>Davul</li>
                 <li>Piyano</li>
                 <li>Keman</li>
+
+                <a href="about.html"><button type="button" class="btn btn-primary mt-3">Hakkımızda</button></a>
 
             </div>
         </div>
