--- a/work8-bootstrap-1/product.html
+++ b/work8-bootstrap-1/product.html
@@ -47,7 +47,7 @@
                     <div class="card h-100">
                         <img src="https://picsum.photos/id/39/400/500" style="width: 395px;" class="card-img-top p-4" alt="Card 1">
                         <div class="card-body">
-                            <a href="$$$">
+                            <a href="#">
                                 <h5 class="card-title">Eski Bir Plak Oynatıcısı</h5>
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ipsa.</p>
@@ -59,11 +59,11 @@
                     <div class="card h-100">
                         <img src="https://picsum.photos/id/43/400/500" style="width: 395px;" class="card-img-top p-4" alt="Card 2">
                         <div class="card-body">
-                            <a href="$$$">
+                            <a href="#">
                                 <h5 class="card-title">İlham verici tablo</h5>
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ipsa.</p>
-                            <span class="badge bg-secondary">500 $</span>
+                            <span class="badge bg-secondary">100 $</span>
                         </div>
                     </div>
                 </div>
@@ -71,18 +71,18 @@
                     <div class="card h-100">
                         <img src="https://picsum.photos/id/42/400/500" style="width: 395px;" class="card-img-top p-4" alt="Card 3">
                         <div class="card-body">
-                            <a href="$$$">
+                            <a href="#">
                                 <h5 class="card-title">İlham verici ahşap masa</h5>
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ipsa.</p>
-                            <span class="badge bg-secondary">500 $</span> </div>
+                            <span class="badge bg-secondary">400 $</span> </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
                         <img src="https://picsum.photos/id/46/400/500" style="width: 395px;" class="card-img-top p-4" alt="Card 4">
                         <div class="card-body">
-                            <a href="$$$">
+                            <a href="#">
                                 <h5 class="card-title">İlham verici tablo</h5>
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ipsa.</p>
@@ -93,7 +93,7 @@
                     <div class="card h-100">
                         <img src="https://picsum.photos/id/40/400/500" style="width: 395px;" class="card-img-top p-4" alt="Card 5">
                         <div class="card-body">
-                            <a href="$$$">
+                            <a href="#">
                                 <h5 class="card-title">İlham verici hayvanlar</h5>
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ipsa.</p>
@@ -104,7 +104,7 @@
                     <div class="card h-100">
                         <img src="https://picsum.photos/id/41/400/500" style="width: 395px;" class="card-img-top p-4" alt="Card 6">
                         <div class="card-body">
-                            <a href="$$$">
+                            <a href="#">
                                 <h5 class="card-title">Hatıraların Damlalara Yansıması</h5>
                             </a>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ipsa.</p>
@@ -116,7 +116,21 @@
 
             <!--Cards End-->
 
+            <div class="container">
+                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                    <p class="col-md-4 mb-0 text-muted">© 2022 Enst. | Müzik Dükkanım</p>
 
+                    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+                    </a>
+
+                    <ul class="nav col-md-4 justify-content-end">
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Anasayfa</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Hakkımızda</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Ürünlerimiz</a></li>
+                    </ul>
+                </footer>
+            </div>
 
         </div>
 
