--- a/work8-bootstrap-1/about.html
+++ b/work8-bootstrap-1/about.html
@@ -37,18 +37,18 @@
     </nav>
     <!--Navbar End-->
     <!--Container Start-->
-    <div class="container " ">
-    <div class="row m-5 text-center ">
-        <h2 class="text-danger "> Hakkımızda </h2>
-        <hr>
-        <img src="https://picsum.photos/id/39/700/200 " class="mt-2 " style="width: 700px; " alt="Müziğe olan ilgimiz ">
+    <div class="container">
+        <div class="row m-5 text-center ">
+            <h2 class="text-danger "> Hakkımızda </h2>
+            <hr>
+            <img src="https://picsum.photos/id/39/700/200 " class="mt-2 " style="width: 700px; " alt="Müziğe olan ilgimiz ">
 
-        <p>Müzik dükkanım 2022 yılında İstanbulun en nezih semtinde insanlara daha fazla müzik ulaştırabilmek adına kuruldu.</p>
-        <h3 class="text-warning mt-1 "> Vizyonumuz </h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt asperiores inventore perferendis dolor ipsam, explicabo voluptate velit sapiente facilis qui minus? Veniam officiis suscipit minima reiciendis magni harum, iure itaque.</p>
-        <h2 class="text-warning mt-1 "> Misyonumuz </h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem fugit, repellat voluptatum iusto repudiandae pariatur quisquam doloremque perferendis fuga perspiciatis et porro modi animi doloribus eius mollitia dignissimos omnis expedita!</p>
-    </div>
+            <p>Müzik dükkanım 2022 yılında İstanbulun en nezih semtinde insanlara daha fazla müzik ulaştırabilmek adına kuruldu.</p>
+            <h3 class="text-warning mt-1 "> Vizyonumuz </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt asperiores inventore perferendis dolor ipsam, explicabo voluptate velit sapiente facilis qui minus? Veniam officiis suscipit minima reiciendis magni harum, iure itaque.</p>
+            <h2 class="text-warning mt-1 "> Misyonumuz </h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem fugit, repellat voluptatum iusto repudiandae pariatur quisquam doloremque perferendis fuga perspiciatis et porro modi animi doloribus eius mollitia dignissimos omnis expedita!</p>
+        </div>
     </div>
     <!--Container End-->
 
